changes to abstract. seperated the SE to its own section and added the start of the CGRAs related work section
Signed-off-by: BASHAR ROMANOUS <basharromano@micron.com>

--- a/doc/sample-base.bib
+++ b/doc/sample-base.bib
@@ -371,3 +371,73 @@
   biburl    = {https://dblp.org/rec/journals/corr/SchulmanWDRK17.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@incollection{theodoridis2007survey,
+  title={A survey of coarse-grain reconfigurable architectures and cad tools},
+  author={Theodoridis, George and Soudris, Dimitrios and Vassiliadis, Stamatis},
+  booktitle={Fine-and Coarse-Grain Reconfigurable Computing},
+  pages={89--149},
+  year={2007},
+  publisher={Springer}
+}
+
+@article{prabhakar2018plasticine,
+  title={Plasticine: a reconfigurable accelerator for parallel patterns},
+  author={Prabhakar, Raghu and Zhang, Yaqi and Koeplinger, David and Feldman, Matt and Zhao, Tian and Hadjis, Stefan and Pedram, Ardavan and Kozyrakis, Christos and Olukotun, Kunle},
+  journal={IEEE Micro},
+  volume={38},
+  number={3},
+  pages={20--31},
+  year={2018},
+  publisher={IEEE}
+}
+
+@misc{morgan2018intel,
+  title={Intel’s Exascale Dataflow Engine Drops X86 and von Neumann},
+  author={Morgan, Timothy Prickett},
+  year={2018}
+}
+
+@article{nicol2017coarse,
+  title={A coarse grain reconfigurable array (CGRA) for statically scheduled data flow computing},
+  author={Nicol, Chris},
+  journal={Wave computing white paper},
+  year={2017}
+}
+
+@inproceedings{vissers2019versal,
+  title={Versal: The xilinx adaptive compute acceleration platform (acap)},
+  author={Vissers, Kees},
+  booktitle={Proceedings of the 2019 ACM/SIGDA International Symposium on Field-Programmable Gate Arrays},
+  pages={83--83},
+  year={2019}
+}
+
+@inproceedings{adriaansen2016code,
+  title={Code generation for reconfigurable explicit datapath architectures with llvm},
+  author={Adriaansen, Micha{\"e}l and Wijtvliet, Mark and Jordans, Roel and Waeijen, Luc and Corporaal, Henk},
+  booktitle={2016 Euromicro Conference on Digital System Design (DSD)},
+  pages={30--37},
+  year={2016},
+  organization={IEEE}
+}
+
+@inproceedings{chin2017cgra,
+  title={CGRA-ME: A unified framework for CGRA modelling and exploration},
+  author={Chin, S Alexander and Sakamoto, Noriaki and Rui, Allan and Zhao, Jim and Kim, Jin Hee and Hara-Azumi, Yuko and Anderson, Jason},
+  booktitle={2017 IEEE 28th international conference on application-specific systems, architectures and processors (ASAP)},
+  pages={184--189},
+  year={2017},
+  organization={IEEE}
+}
+
+@article{mei2003exploiting,
+  title={Exploiting loop-level parallelism on coarse-grained reconfigurable architectures using modulo scheduling},
+  author={Mei, Bingfeng and Vernalde, Serge and Verkest, Diederik and De Man, Hugo and Lauwereins, Rudy},
+  journal={IEE Proceedings-Computers and Digital Techniques},
+  volume={150},
+  number={5},
+  pages={255},
+  year={2003},
+  publisher={IET}
+}
