--- a/doc/sample-sigplan.tex
+++ b/doc/sample-sigplan.tex
@@ -23,6 +23,7 @@
 %%
 %% The first command in your LaTeX source must be the \documentclass command.
 \documentclass[sigplan,screen]{acmart}
+\usepackage{todonotes}
 %% NOTE that a single column version is required for 
 %% submission and peer review. This can be done by changing
 %% the \doucmentclass[...]{acmart} in this template to 
@@ -245,17 +246,17 @@
 \section{Introduction}
 \input{sections/Introduction}
 
+\section{Background}
+\input{sections/se}
+
 \section{Method}
 \input{sections/Method}
 
 \section{Related work}
 \input{sections/Related_work}
 
-
 \section{Results}
 \input{sections/Results}
-
-
 
 \section{Conclusion}
 \input{sections/Conclusion}
