added missing files
Signed-off-by: BASHAR ROMANOUS <basharromano@micron.com>

--- a/doc/sections/Abstract.tex
+++ b/doc/sections/Abstract.tex
@@ -1,10 +1,11 @@
 The Streaming Engine (SE) is a Coarse-Grained Reconfigurable Array developed by Micron 
 Technology.
 The SE provides programming flexibility and high-performance with energy efficiency.
-A program is broken down into a set of one or more Synchronous Data-Flows (SDFs).
-An SDF is represented as a computation graph, where every instruction a node.
-Each node need to be mapped to the right slot and array in the SE to ensure the correct execution of the SDF and thus, the program.
-This creates an optimization problem with a vast and sparse search space.
+%A program is broken down into a set of one or more Synchronous Data-Flows (SDFs).
+A program is represented as a computation graph, where every instruction a node.
+Each node need to be mapped to the right slot and array in the SE to ensure the correct execution of the program.
+This creates an
+ optimization problem with a vast and sparse search space.
 A manual mapping of the graph takes an infeasible amount of time by the programmer.
 such manual mapping is impractical because it requires an expertise and knowledge in the SE micro-architecture and reduces the search-space, thus, trading off optimization possibilities.
 In this work we propose an AI-based mapper to explore mappings and optimize them in an unsupervised manner using reinforcement learning framework.
@@ -15,4 +16,3 @@ Graph neural networks are added to create embeddings to represent the computatio
 A transformer block is used to model sequential operation placement mode. 
 The trained model was able to create valid mappings for SE.
 The implemented method is compared against evolutionary search and baseline.
-\todo[inline]{add metrics that show the merit of the proposed method}
