--- a/doc/sections/Introduction.tex
+++ b/doc/sections/Introduction.tex
@@ -1,6 +1,6 @@
 As Dennard scaling ends, big-data applications such as real-time image processing, graph analytics, and deep learning continue to push the boundaries of performance and energy efficiency requirements for compute system. 
 One solution to this challenge is to move compute closer to memory or storage for substantial energy savings of data movement. 
-We have developed an innovative Near-Data Computing (NDC) architecture\todo[inline]{changed from CNM to NDC, right?} that leverages the dramatic opportunities provided by the new CXL protocol. 
+We have developed an innovative Near-Data Computing (NDC) architecture that leverages the dramatic opportunities provided by the new CXL protocol. 
 NDC incorporates heterogenous compute elements in the memory/storage subsystem to accelerate various computing tasks near data. 
 One of these compute elements is the Streaming Engine (SE).
 
@@ -13,6 +13,7 @@ It bridges SDFs through asynchronous operations, which include SDF initiation, a
 Together, SF and AF allow the tiles to efficiently execute high-level programming language constructs. 
 Simulation results of hand-crafted SE kernels have shown orders-of-magnitude better performance per watt on data-intensive applications than existing computing platforms.
 
+Se example \ref{fig:se_example}
 Mapping the instructions from the computation graph of a program onto the compute elements of the SE while adhering to architectural constraints is an NP-complete problem with a vast and sparse search space. 
 Constraints related to tile memory and synchronous dataflow, use of delays to match timing requirements and more are necessary to ensure correct execution. 
 Creating the mappings manually or using brute force algorithms takes time and lots of effort. 
@@ -28,3 +29,12 @@ configuration labels. The RL mapper performs unsupervised learning and optimizat
 
 This line of research is inspired by recent work that used RL for chip placement. 
 Our problem requirement of mapping nodes of a computation graph to available compute elements is similar to the problem of placing nodes of a chip netlist on a chip canvas. 
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\linewidth]{fig/SE_example.pdf}
+    \caption{
+      Diagram of the Streaming Engine.
+    }
+    \label{fig:se_example}
+  \end{figure}
