--- a/doc/sections/se.tex
+++ b/doc/sections/se.tex
@@ -8,7 +8,7 @@ Together, the SF nad AF allow the tiles to efficiently execute high level langua
 
 \begin{figure}
   \centering
-  \includegraphics[width=\linewidth]{fig/se_device_tile.pdf}
+  \includegraphics[trim=10 100 10 50, clip, width=\linewidth]{fig/se_device_tile.pdf}
   \caption{
     Diagram of the Streaming Engine.
   }
