more on the example
Signed-off-by: BASHAR ROMANOUS <basharromano@micron.com>

--- a/doc/sample-sigplan.tex
+++ b/doc/sample-sigplan.tex
@@ -244,21 +244,27 @@
 \maketitle
 
 \section{Introduction}
+\label{sec:intro}
 \input{sections/Introduction}
 
 \section{Background}
+\label{sec:background}
 \input{sections/se}
 
 \section{Method}
+\label{sec:rlmapper}
 \input{sections/Method}
 
 \section{Related work}
+\label{sec:relatedwork}
 \input{sections/Related_work}
 
 \section{Results}
+\label{sec:results}
 \input{sections/Results}
 
 \section{Conclusion}
+\label{sec:conclusion}
 \input{sections/Conclusion}
 
 
