more writing to intro and backround
Signed-off-by: BASHAR ROMANOUS <basharromano@micron.com>

--- a/doc/sample-base.bib
+++ b/doc/sample-base.bib
@@ -441,3 +441,10 @@
   year={2003},
   publisher={IET}
 }
+
+@article{sharma2020compute,
+  title={Compute express link 2.0 white paper},
+  author={Sharma, Debendra Das and Tavallaei, Siamak},
+  journal={Tech. Rep.},
+  year={2020}
+}
