--- a/doc/sections/Abstract.tex
+++ b/doc/sections/Abstract.tex
@@ -4,8 +4,7 @@ The SE provides programming flexibility and high-performance with energy efficie
 %A program is broken down into a set of one or more Synchronous Data-Flows (SDFs).
 A program is represented as a computation graph, where every instruction a node.
 Each node need to be mapped to the right slot and array in the SE to ensure the correct execution of the program.
-This creates an
- optimization problem with a vast and sparse search space.
+This creates an optimization problem with a vast and sparse search space.
 A manual mapping of the graph takes an infeasible amount of time by the programmer.
 such manual mapping is impractical because it requires an expertise and knowledge in the SE micro-architecture and reduces the search-space, thus, trading off optimization possibilities.
 In this work we propose an AI-based mapper to explore mappings and optimize them in an unsupervised manner using reinforcement learning framework.
