for section 2, reduced a level of sub sections
Signed-off-by: BASHAR ROMANOUS <basharromano@micron.com>

--- a/doc/sample-sigplan.tex
+++ b/doc/sample-sigplan.tex
@@ -247,7 +247,7 @@
 \label{sec:intro}
 \input{sections/Introduction}
 
-\section{Background}
+\section{Background on the SE}
 \label{sec:background}
 \input{sections/se}
 
